fix word wrap

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -81,6 +81,10 @@ article {
   top: 0px;
   z-index: 1;
 }
+article p {
+  word-wrap: break-word;
+  font-size: 18px;
+}
 article:hover {
   box-shadow: 1px 1px 1px #4056a1;
 }
@@ -89,10 +93,6 @@ article header div {
 }
 article header div img {
   width: 35px;
-}
-article header div p {
-  word-wrap: break-word;
-  font-size: 18px;
 }
 article footer time {
   color: #4056a1;
